--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mileage-cli",
+  "name": "@mileage/cli",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,5 +13,6 @@
     "commander": "^9.1.0",
     "download-git-repo": "^3.0.2"
   },
-  "bin": "mileage-cli"
+  "bin": "mileage-cli",
+  "private": false
 }
