--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mileage/cli",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,8 @@
     "commander": "^9.1.0",
     "download-git-repo": "^3.0.2"
   },
-  "bin": "mileage-cli",
+  "bin": {
+    "mileage-cli": "index.js"
+  },
   "private": false
 }
