--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mileage/cli",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mileage/mock": "^1.0.1",
     "commander": "^9.1.0",
     "download-git-repo": "^3.0.2"
   },
